# Scribble

./: README.md
LLM/palm/: pyproject.toml
LLM/palm/palm/: chat.py  embedding.py  llm.py
LLM/palm/palm/sample_codes/: fibonacci.cpp  fibonacci.py  fibonacci.rs  fizzbuzz.rs
Rust/: channel.rs  channel2.rs
