[tool.poetry]
name = "palm"
version = "0.1.0"
description = ""
authors = ["Hirotaka Kawashima <k.hirotaka@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = "^1.32.0"
langchain = "^0.0.285"
google-search-results = "^2.4.2"
unstructured = "^0.10.12"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
